--- a/lesson3/task2/package.json
+++ b/lesson3/task2/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "@babel/cli": "^7.12.10",
     "@babel/core": "^7.12.10",
+    "@babel/preset-env": "^7.12.11",
     "jest": "^26.6.3",
     "npm-run-all": "^4.1.5",
     "sass": "^1.32.5"
