--- a/lesson3/task2/.babelrc
+++ b/lesson3/task2/.babelrc
@@ -3,7 +3,7 @@
     [
       "@babel/preset-env",
       {
-        "targets": "last 2 versions, > 1%",
+        "targets": "> 3%",
         "useBuiltIns": "usage",
         "corejs":  3,
         "modules": false
