--- a/lesson6/task2/package.json
+++ b/lesson6/task2/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "webpack",
+    "build": "webpack -p",
     "watch": "webpack -d --devtools eval-source-maps -w"
   },
   "keywords": [],
@@ -15,10 +15,10 @@
     "@babel/core": "^7.12.10",
     "@babel/preset-env": "^7.12.11",
     "babel-loader": "^8.2.2",
-    "webpack": "^5.17.0",
-    "webpack-cli": "^4.4.0"
+    "webpack": "^4.41.3",
+    "webpack-cli": "^3.3.10"
   },
   "dependencies": {
-    "core-js": "^3.8.3"
+    "core-js": "^3.8.2"
   }
 }
